--- a/projects/ngx-conditional-validator/package.json
+++ b/projects/ngx-conditional-validator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@outerlimitstech/ngx-conditional-validator",
-  "version": "15.0.0",
+  "version": "16.0.0",
   "description": "Angular library to build reactive forms dynamic validation",
   "bugs": "https://github.com/OuterlimitsTech/olt-ngx-conditional-validator/issues",
   "homepage": "https://github.com/OuterlimitsTech/olt-ngx-conditional-validator#readme",
@@ -18,10 +18,10 @@
     "reactive"
   ],
   "peerDependencies": {
-    "@angular/common": ">=15.0.0 <16.0.0",
-    "@angular/core": ">=15.0.0 <16.0.0",
-    "@angular/forms": ">=15.0.0 <16.0.0",
-    "rxjs": ">=7.0.0 <8.0.0"
+    "@angular/common": ">=16.0.0",
+    "@angular/core": ">=16.0.0",
+    "@angular/forms": ">=16.0.0",
+    "rxjs": ">=7.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
